[www] - Update JS deps - Fix toast behind the player on mobile

--- a/public/sass/components/toast.scss
+++ b/public/sass/components/toast.scss
@@ -12,7 +12,8 @@
   }
 }
 
-.toast-cookie-container {
+.toast-cookie-container, .toast-cookie-container-app {
+  z-index: 1300 !important;
   .toast-cookie {
     width: 450px !important;
   }
